navbar, jumping problems on ios cause by search bar and some minors details fix

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,8 +9,16 @@ html {
 section,
 .globe,
 #bgVideo{
-  height: calc(var(--vh, 1vh) * 100);
-  min-height: -webkit-fill-available;
+  height: 100dvh;
+  min-height: 100dvh;
+}
+
+#bgVideo {
+    object-fit: cover;
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 body.loading * {
